index.css
body {
    font-family: Arial, Helvetica, sans-serif;
    
}


#canvas{
    border: 1px solid #2D4037;
    background-image: url('./images/HnHiDVi.png');
    background-size: contain;
    background-repeat: no-repeat;

}

#dino-run {
    border: 1px solid gray;
    display: absolute;
    top: 25%;
    left: 35%;

}

.centered {
    position: absolute;
    top: 25%;
    left: 25%;

}

.instructions {
    position: absolute;
    top: 80%;
    left: 36%;
    text-align: center;
}

.hidden {
    display: none;
}

.instructions-dino {
    position: absolute;
    top: 60%;
    left: 38.5%;
    text-align: center;
    
}

#highscore{
    position: absolute;
    top: 20%;
    left: 35%;
}

#score{
    position: absolute;
    top: 20%;
    left: 59%;
}

#return-button {
    position: absolute;
    top: 94%;
    box-shadow: 0px 3px 3px 0px #8a2a21;
	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
	background-color:#c62d1f;
	border-radius:6px;
	border:2px solid #d02718;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:17px;
	font-weight:bold;
	padding:11px 16px;
	text-decoration:none;
	text-shadow:0px 0px 0px #810e05;

}

#return-button:hover {
	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
	background-color:#f24437;
}

#End {
    color: wheat;
    font-size: 100px;
    position: absolute;
    top: 24%;
    left: 30%;
}

        

